# cli-weather

./: Cargo.toml  README.md
src/: api_structs.rs  main.rs
