[package]
name = "forecast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive", "wrap_help"] }
cli-table = "0.4.7"
dotenv = { version = "0.15.0", features = ["clap"] }
reqwest = { version = "0.11.18", features = ["json", "blocking", "gzip", "deflate"] }
serde = { version = "1.0.164", features = ["derive"] }
tabled = "0.12.2"
